Fix footer overlap

--- a/web/public/css/taginfo.css
+++ b/web/public/css/taginfo.css
@@ -245,12 +245,11 @@ div#footer {
 }
 
 div#footer_left {
-    position: absolute;
+    float: left;
 }
 
 div#footer_right {
-    position: absolute;
-    right: 0px;
+    float: right;
     text-align: right;
 }
 
